  screen.c, sysrom.c, ui_basic.c, ui.c, sdl/input.c, android/jni/jni.c,
  atari800.man, DOC/USAGE:
  Reworked support for machine types. All XL/XE features can be enabled/
  disabled independently. UI menu "Select System" renamed to "System Settings"
  and reworked - now it only lists systems manufactured originally, with
  additional options for configuration.


2012-03-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* pia.c: Fix recently-introduced bug with MEMORY_cartA0BF_enabled being saved
  twice in savestates - in both memory.c and pia.c.

* af80.c, cassette.c, devices.c, log.c, monitor.c, pbi_bb.c, pbi_mio.c,
  pbi_proto80.c, pbi_xld.c, sysrom.c, ui.c, xep80.c, wince/port/missing.c:
  Remove initialisation of local-static and global arrays to "", to prevent
  them ending up in .data segment instead of .bss on some architectures/
  compilers (android-arm). The C standard requires them to be initialised with
  zeroes at runtime, so initialisation with "" is not needed.


2012-03-10  Kostas Nakos  <knakos@gmail.com>
* android/*: Rename android port to Colleen


2012-03-08  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.[ch], cfg.c, input.c, memory.[ch], sysrom.[ch], ui.c, atari800.man,
  DOC/USAGE: Add emulation of the XEGS (builtin game, detachable keyboard).

* atari.[ch], cfg.c, input.c, ui.c: Add emulation of 1200XL option jumpers,
  as described in Atari XL Addendum section 3.8.

* ui.c: Emulate 32KB and 48KB memory expansions for the 600XL manufactured by
  RC Systems.


2012-03-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* memory.c, pia.[ch], statesav.c: Fix 2 errors related to separate access
  of CPU and ANTIC to XE RAM:
  - Self-Test should be visible also in the bank seen by ANTIC.
  - When saving/loading a savestate in which only ANTIC has access to XE RAM,
  XE bank number was not saved/loaded correctly. To fix this, loading/saving
  of MEMORY_xe_bank had to be moved from PIA_StateRead to MEMORY_StateRead; so